# fourth-stomach

./: .gitignore  INSTALL.md  MANIFEST.in  Makefile  PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements.txt  setup.py  vercel.json
.claude/: settings.local.json
docs/: VALIDATION_ROADMAP.md
docs/economics/: economic-equavalence.tex  origin-of-economics.tex  resource-allocation.tex
docs/philosophy/: buhera-conclave.tex  phenomenology.tex
docs/publication/: circulation-transactions-network.tex  credit-graph-network.tex  financial-representation.tex  fourth-stomach.tex  harmonic-network-graph.tex  reality-curency-shadow-network.tex  reality-currency-circulation-transaction-network.tex  reality-currency-graph-credit-network.tex  temporal-arbitrage-in-circulation-networks.tex  trans-limpopo-jangara.tex  validation-framework.tex
publications/portfolio-optimisation/: portfolio-fuzzy-circuit-graph.tex  references.bib
publications/portfolio-optimisation/validation/: core.py  generate_panels.py  run_experiments.py
publications/portfolio-optimisation/validation/panels/: captions.tex
publications/portfolio-optimisation/validation/results/: exp1_convergence_vs_fiedler.json  exp2_time_invariance.json  exp3_fuzzy_risk_vs_variance.json  exp4_spectral_risk_scaling.json  exp5_shock_propagation.json  exp6_harmonic_coincidence.json  exp7_markowitz_recovery.json  summary.json
publications/ruminant-architecture/: references.bib  ruminant-processing-architecture.tex
publications/ruminant-architecture/figures/: captions.tex
publications/ruminant-architecture/validation/: generate_panels.py  run_experiments.py
publications/ruminant-architecture/validation/results/: exp1_convergence.json  exp2_spectral.json  exp3_gap_reduction.json  exp4_free_energy.json  exp5_specialisation.json  exp6_lora.json  (+3 more)
publications/thermodynamic-index/: distributed-thermodynamic-stock-index.tex  references.bib
publications/thermodynamic-index/figures/: index-captions.tex
publications/thermodynamic-index/validation/: generate_panels.py  run_experiments.py
ruminant/: __init__.py  pipeline.py
ruminant/chambers/: __init__.py  abomasum.py  omasum.py  reticulum.py  rumen.py  rumination.py
ruminant/evaluation/: __init__.py  thermodynamic.py
ruminant/processors/: __init__.py  financial.py  market_data.py  theorem.py
ruminant/trainers/: __init__.py  chamber_lora.py
ruminant_output/model/: training_manifest.json
ruminant_output/training/: training_corpus.jsonl
shadrach/: package.json  tailwind.config.js  website.md
shadrach/src/components/: Desk.js  Footer.js  HireMe.js  Logo.js  Navbar.js
shadrach/src/pages/: _document.js  api-docs.js  index.js  licensing.js  portfolio.js  representation.js  ruminant.js  thermodynamics.js
src/ctn/: GRAPH_COMPLETION_FINANCE.md  README.md  THEORY.md  __init__.py  demo_circulation.py  demo_graph_completion_finance.py  demo_shadow_network.py  graph_completion_finance.py  shadow_network.py  transaction_graph.py  visualization.py
src/representation/: __init__.py  circuit.py  demo_representations.py  gas_molecules.py  moon_landing.py  semantic.py  sequence.py  shadow.py
tests/: __init__.py  test_ctn.py
(+14 files in other folders)
